# maws

./: .coveragerc  .gitignore  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  setup.py
docs/: conf.py  index.rst
src/maws/: __main__.py  api.py  cli.py
tests/: conftest.py  test_cli.py  test_skeleton.py
tests/unit/: test_api.py
